# ScriptedVLA

./: .gitignore  CHANGELOG.md  EXAMPLES.md  LEROBOT_VERSION_SOLUTION.md  QUICKSTART.md  README.md  STATE_DIMENSION_ANALYSIS.md  UNIFIED_INPUT_FORMAT.md  VLM_EVALUATION.md  analyze_state_dimensions.py  config.yaml  create_dummy_data.py  dataset_statistics.py  download_model.py  inference.py  pyproject.toml  test_simulation.py  train.py  train_public_datasets.py
src/ScriptedVLA/: __init__.py
src/ScriptedVLA/data/: __init__.py  act_dataset.py  dataset.py  download_datasets.py  lerobot_dataset_adapter.py  libero_dataset.py
src/ScriptedVLA/model/: __init__.py  action_head.py  vla.py  vla_qwen_groot.py  vlm.py
src/ScriptedVLA/utils/: __init__.py  config.py  normalization.py
src/model/: __init__.py  action_head.py  vla.py  vlm.py
src/utils/: __init__.py  logger.py
test/: __init__.py  evaluate_vlm_capabilities.py  test_action_head.py  test_inference.py  test_lerobot_dataset_loader.py  test_lerobot_training.py  test_training.py  test_vla.py  test_vla_qwen_groot.py  test_vlm.py
